--- a/explore-assistant-extension/package.json
+++ b/explore-assistant-extension/package.json
@@ -14,79 +14,79 @@
   "author": "Google LLC",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">=14 <17"
+    "node": ">=18"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@looker/components": "^4.1.3",
-    "@looker/components-providers": "1.5.31",
-    "@looker/embed-sdk": "^1.6.1",
-    "@looker/extension-sdk": "^24.2.0",
-    "@looker/extension-sdk-react": "^24.2.0",
-    "@looker/sdk": "^24.2.0",
+    "@looker/components": "^5.0.3",
+    "@looker/components-providers": "1.5.34",
+    "@looker/embed-sdk": "^1.8.6",
+    "@looker/extension-sdk": "^24.12.1",
+    "@looker/extension-sdk-react": "^24.12.1",
+    "@looker/sdk": "^24.12.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.16.5",
-    "@mui/material": "^5.16.5",
-    "@reduxjs/toolkit": "^2.2.2",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/material": "^5.16.6",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/crypto-js": "^4.2.2",
     "@types/react": "^17.0.80",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
-    "highlight.js": "^11.9.0",
+    "highlight.js": "^11.10.0",
     "highlightjs-lookml": "^1.0.2",
     "install": "^0.13.0",
-    "marked": "^12.0.1",
-    "marked-highlight": "^2.1.1",
+    "marked": "^13.0.3",
+    "marked-highlight": "^2.1.3",
     "npm": "^10.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^4.0.13",
-    "react-is": "^16.13.1",
+    "react-is": "^17.0.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
     "redux-persist": "^6.0.0",
-    "sass": "^1.72.0",
-    "sass-loader": "^14.1.1",
-    "styled-components": "^5.3.11",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
+    "styled-components": "^5.3.1",
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/plugin-transform-react-jsx": "^7.13.12",
-    "@babel/plugin-transform-runtime": "^7.16.4",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@babel/runtime": "^7.12.5",
-    "@types/node": "^14.14.12",
-    "@types/react-dom": "^16.9.19",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/readable-stream": "^2.3.5",
-    "@types/styled-components": "^5.1.28",
-    "@types/styled-system": "^5.1.18",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-react-jsx": "^7.25.2",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@babel/runtime": "^7.25.0",
+    "@types/node": "^22.0.2",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/readable-stream": "^4.0.15",
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-system": "^5.1.22",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "autoprefixer": "^10.4.19",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^9.1.3",
     "babel-preset-nano-react-app": "^0.1.0",
-    "css-loader": "^6.8.1",
-    "dotenv": "^8.6.0",
-    "eslint": "^8.13.0",
+    "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
+    "eslint": "^9.8.0",
     "file-loader": "^6.2.0",
     "postcss": "^8.4.40",
     "postcss-loader": "^8.1.1",
-    "prettier": "^2.2.1",
-    "react-hot-loader": "^4.12.20",
-    "style-loader": "^3.3.3",
-    "typescript": "^4.5.2",
-    "webpack": "^5.67.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.8.1"
+    "prettier": "^3.3.3",
+    "react-hot-loader": "^4.13.1",
+    "style-loader": "^4.0.0",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "babel": {
     "presets": [
